--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Next Public
 # -----------------------------------------------------------------------------
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
-NEXT_PUBLIC_WEB_URL=
+NEXT_PUBLIC_APP_URL="https://miniature-happiness-chi.vercel.app/"
+NEXT_PUBLIC_WEB_URL="https://miniature-happiness-chi.vercel.app/"
 
 # -----------------------------------------------------------------------------
 # Nodemailer - Sending a email via contact page
